<resources>
    <string name="app_name">DgaeaApp</string>
    <string name="botonInicio">ACCEDER</string>
    <string name="bienvenida">Mi DGAEA</string>
    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="login">Iniciar sesión</string>
    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_firebase_auth">No se pudo autenticar con Firebase</string>
    <string name="descripcion">Portal de Servicios Dirección General de Asuntos Económicos y Administrativos PUCV</string>
    <string name="action_settings">Ajustes</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
    <string name="texto1">Institución:</string>
    <string name="texto2">Tipo Solicitud:</string>
    <string name="texto3">Cuenta Cheque:</string>
    <string name="texto4">Descripción:</string>
    <string name="texto">Monto:</string>
    <string name="email">Nombre de la Obra</string>
    <string name="password">Password</string>
    <string name="aprobar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="validate">Validate</string>
    <string name="mandatory">This field is mandatory</string>
    <string name="pucv">pucv</string>
    <string name="dgaea">dgaea</string>
    <string name="buses">buses</string>
    <string name="tuop">tuopinion</string>

</resources>
