<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:adjustViewBounds="true"
        android:contentDescription="fondo"
        android:cropToPadding="true"
        android:scaleType="center"
        android:src="@drawable/fondo" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:contentDescription="logo"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bienvenida"
        android:textColor="#ffffff"
        android:textSize="22dp"
        android:textStyle="bold"
        android:layout_marginTop="180dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/descripcion"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:layout_marginTop="230dp"/>

    <Button
        android:id="@+id/btnComenzar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="400dp"
        android:background="@drawable/button"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:text="@string/botonInicio"
        android:textColor="#fff"
        android:textStyle="bold" />

</FrameLayout>